# CrabOS

./: .gdbinit  Cargo.toml  Makefile  README.md  Yanai's_research.md  kernels.md  research.md  run.sh  x86_64.json
.cargo/: config.toml
kernels/: AlmeidaOS.md  ArbelOS.md  ByteOS.md  MonkOS.md
research/: boot_process.md  interrupts.md  miscellaneous.md  mm.md  processes.md  rust.md  shell.md  uart.md
scripts/: .gdbinit  debug.sh
src/: lib.rs  log.rs  logger.rs  main.rs  panic.rs  serial.rs  uart.rs  vga_buffer.rs  vmm.rs
src/drivers/: mod.rs  serial.rs  vga.rs
src/hardware/: mod.rs
src/interrupts/: gdt.rs  idt.rs  mod.rs  service_routines.rs
src/log/: logger.rs  mod.rs  serial.rs
src/memory/: buddy.rs  frame_allocator.rs  frame_distributer.rs  heap.rs  heap_management.rs  mapper.rs  mod.rs  paging.rs  pmm.rs  types.rs  vmm.rs
src/memory/buddy_system/: buddy.rs  manager.rs  mod.rs
src/processes/: exec.rs  mod.rs  objects.rs  scheduler.rs
src/syscalls/: mod.rs  services.rs
src/tests/: mod.rs
src/userland/: mod.rs  syscalls.rs
tests/: buddy.rs  heap.rs  interrupts.rs  memory.rs  mm.rs  pmm.rs  processes.rs  vga.rs  vmm.rs
