[package]
name = "CrabOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# disable stack unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.6"
bootloader = "0.9.8"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
