[package]
name = "CrabOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# disable stack unwinding
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[dependencies]
volatile = "0.2.6"
bootloader = "0.9.8"
uart_16550 = "0.2.0"
spin = "0.5.2"
log = "0.4.17"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]


[package.metadata.bootimage]
# -nographic -> output is in the serial
# -s -S -> debug mode
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
