# Manifest file
[package]
name = "CrabOS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
uart_16550 = "0.2.0"
linked_list_allocator = "0.9"
spin = "0.9.4"
log = "0.4.17"
x86_64 = "0.14.10"
bitflags = "1.3.2"
enum-iterator = "1.4.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
# 2^31 -> 2 GiB
physical-memory-offset = "0x0000000080000000"


[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-chardev", "stdio,id=char0,mux=on,logfile=history.log,signal=off",
    "-serial", "chardev:char0",
    "-mon", "chardev=char0",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-drive", "format=raw,file={}",
    "-m", "8G",
    ]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display", "none",
    "-s", "-S"
]
test-success-exit-code = 33 # must be different from the default exit status

